# strings

./: CMakeLists.txt  README.md  strings.vix  vix.json
examples/: case_example.cpp  complete_demo.cpp  replace_example.cpp  split_join_example.cpp  trim_example.cpp
include/strings/: strings.hpp
tests/: test_basic.cpp
